# FordEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_all.bat  build_incremental.bat
Docs/: STRUCTURE.md
Editor/: CMakeLists.txt
Editor/src/: EditorApplication.cpp  EditorApplication.hpp  main.cpp
Engine/: CMakeLists.txt
Engine/Editor/: CMakeLists.txt  FordEditor.rc.in
Engine/RuntimeApp/: CMakeLists.txt
Engine/include/FDE/: Export.hpp  FDE.hpp  pch.hpp
Engine/include/FDE/Asset/: AssetDatabase.hpp  AssetId.hpp  AssetLoadQueue.hpp  AssetManager.hpp  AssetPack.hpp  AssetRegistry.hpp  AssetType.hpp  CubemapResource.hpp  MeshImporter.hpp  SkyboxCubemap.hpp  Texture2DResource.hpp
Engine/include/FDE/Core/: Application.hpp  Event.hpp  FileSystem.hpp  Input.hpp  Layer.hpp  LayerStack.hpp  Log.hpp
Engine/include/FDE/Core/Events/: KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Engine/include/FDE/Editor/: EditorApplication.hpp  EditorConsole.hpp  EditorPreferences.hpp  EditorScene3DTools.hpp
Engine/include/FDE/ImGui/: ImGuiContext.hpp  ImGuiLayer.hpp
Engine/include/FDE/Project/: ProjectDescriptor.hpp
Engine/include/FDE/Renderer/: BufferLayout.hpp  Camera2D.hpp  Camera3D.hpp  GraphicsAPI.hpp  IRendererAPI.hpp  RenderCommand.hpp  Renderer.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp  Viewport.hpp
Engine/include/FDE/Renderer/OpenGL/: OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.hpp  OpenGLViewport.hpp
Engine/include/FDE/Runtime/: RuntimeApplication.hpp  RuntimeDebugLayer.hpp  RuntimeMeshResolve.hpp  RuntimeSession.hpp
Engine/include/FDE/Scene/: Components.hpp  Object.hpp  Scene.hpp  Scene2D.hpp  Scene3D.hpp  World.hpp
Engine/include/FDE/Window/: Window.hpp
Engine/src/Asset/: AssetDatabase.cpp  AssetId.cpp  AssetLoadQueue.cpp  AssetManager.cpp  AssetPack.cpp  AssetRegistry.cpp  AssetType.cpp  CubemapResource.cpp  MeshImporter.cpp  SkyboxCubemap.cpp  Texture2DResource.cpp
Engine/src/Core/: Application.cpp  FileSystem.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  StbImage.cpp
Engine/src/Editor/: EditorApplication.cpp  EditorConsole.cpp  EditorPreferences.cpp  EditorScene3DTools.cpp  main.cpp
Engine/src/ImGui/: ImGuiContext.cpp  ImGuiLayer.cpp
Engine/src/Project/: ProjectDescriptor.cpp
Engine/src/Renderer/: Camera2D.cpp  Camera3D.cpp  RenderCommand.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  Viewport.cpp
Engine/src/Renderer/OpenGL/: OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp  OpenGLViewport.cpp
Engine/src/Runtime/: RuntimeApplication.cpp  RuntimeDebugLayer.cpp  RuntimeMeshResolve.cpp  RuntimeSession.cpp
Engine/src/RuntimeApp/: main.cpp
Engine/src/Scene/: Object.cpp  Scene.cpp  Scene2D.cpp  Scene3D.cpp  World.cpp
Engine/src/Window/: Window.cpp
Tests/: CMakeLists.txt  fde_smoke_test.cpp
